tests/alt.yaml
hostsGroups:
  - name: main
    hosts:
      - example.com
  - name: no-tls
    tls: false
    hosts:
      - example2.com

tls:
  secretNamePrefix: toto

paths:
  root:
    path: /
    serviceName: root-service
