tests/values.yaml
annotations:
  kubernetes.io/ingress.class: nginx
  kubernetes.io/tls-acme: 'true'

hostsGroup:
  - name: main
    hosts:
      - example.com
      - example2.com
  - name: alt
    annotations:
      kubernetes.io/ingress.class: other
    hosts:
      - example3.com

paths:
  root:
    path: /
    serviceName: root-service
  other:
    path: /toto/
    serviceRelease: toto-release
    serviceName: toto-service
    servicePort: 1234
