tests/alt-expected.yaml
---
# Source: ingress/templates/configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: test-ingress
  labels:
    helm.sh/chart: ingress
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ingress
    app.kubernetes.io/instance: test
    app.kubernetes.io/component: main
data:
  WEB_HOST: example.com

---
# Source: ingress/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress-main
  labels:
    helm.sh/chart: ingress
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ingress
    app.kubernetes.io/instance: test
    app.kubernetes.io/component: main
spec:
# Add tls only if tls is not set to false.
# With resent version of helm it should be:
# if or ( not ( hasKey $ingress_host_group "tls" ) ) ( not ( eq $ingress_host_group.tls false ) )
# without else section.
  tls:
    - hosts:
        - example.com
      secretName: toto-main
  rules:
    - host: example.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: test-root-service
                port:
                  number: 80

---
# Source: ingress/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress-no-tls
  labels:
    helm.sh/chart: ingress
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ingress
    app.kubernetes.io/instance: test
    app.kubernetes.io/component: main
spec:
# Add tls only if tls is not set to false.
# With resent version of helm it should be:
# if or ( not ( hasKey $ingress_host_group "tls" ) ) ( not ( eq $ingress_host_group.tls false ) )
# without else section.
  rules:
    - host: example2.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: test-root-service
                port:
                  number: 80
