tests/expected.yaml
---
# Source: ingress/templates/configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: test-ingress
  labels:
    helm.sh/chart: ingress
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ingress
    app.kubernetes.io/instance: test
    app.kubernetes.io/component: main
data:
  WEB_HOST: example.com

---
# Source: ingress/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress-main
  labels:
    helm.sh/chart: ingress
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ingress
    app.kubernetes.io/instance: test
    app.kubernetes.io/component: main
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    traefik.ingress.kubernetes.io/router.middlewares: default-test-ingress@kubernetescrd
spec:
# Add tls only if tls is not set to false.
# With resent version of helm it should be:
# if or ( not ( hasKey $ingress_host_group "tls" ) ) ( not ( eq $ingress_host_group.tls false ) )
# without else section.
  tls:
    - hosts:
        - example.com
        - example2.com
      secretName: test-ingress-main
  rules:
    - host: example.com
      http:
        paths:
          - path: "/toto/"
            pathType: Prefix
            backend:
              service:
                name: toto-release-toto-service
                port:
                  number: 1234
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: test-root-service
                port:
                  number: 80
    - host: example2.com
      http:
        paths:
          - path: "/toto/"
            pathType: Prefix
            backend:
              service:
                name: toto-release-toto-service
                port:
                  number: 1234
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: test-root-service
                port:
                  number: 80

---
# Source: ingress/templates/traefik-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: test-ingress-alt
  labels:
    helm.sh/chart: ingress
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ingress
    app.kubernetes.io/instance: test
    app.kubernetes.io/component: main
  annotations:
    kubernetes.io/ingress.class: other
    kubernetes.io/tls-acme: "true"
spec:
# Add tls only if tls is not set to false.
# With resent version of helm it should be:
# if or ( not ( hasKey $ingress_host_group "tls" ) ) ( not ( eq $ingress_host_group.tls false ) )
# without else section.
  entryPoints:
    - websecure
  tls:
    store:
      name: default
      namespace: traefik
  routes:
    -
      match: "( Host(`example3.com`) ) && PathPrefix(`/toto/`)"
      middlewares:
      - name: test-ingress
        namespace: default
      services:
      -
        kind: Service
        name: toto-release-toto-service
        namespace: default
        port: 80
    -
      match: "( Host(`example3.com`) ) && PathPrefix(`/`)"
      middlewares:
      - name: test-ingress
        namespace: default
      services:
      -
        kind: Service
        name: test-root-service
        namespace: default
        port: 80
---
# Source: ingress/templates/traefik-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: test-ingress
  labels:
    helm.sh/chart: ingress
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ingress
    app.kubernetes.io/instance: test
    app.kubernetes.io/component: main
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  headers:
    customResponseHeaders:
      Access-Control-Allow-Headers: '*'
      Access-Control-Allow-Methods: GET, OPTIONS
      Access-Control-Allow-Origin: '*'
